apps/sample-app/sample-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sample-app
  namespace: default
spec:
  selector:
    matchLabels:
      app: sample-app
  template:
    metadata:
      labels:
        app: sample-app
    spec:
      containers:
      - name: sample-app
        image: devkrolikowski/sample-app:0.2.0 # {"$imagepolicy": "flux-system:sample-app"}
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "50Mi"
            cpu: "10m"
        ports:
        - containerPort: 80
