apps/sample-app/sample-app-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sample-app
  namespace: default

spec:
  rules:
    - host: sample-app.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name:  sample-app
                port:
                  number: 80
